<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView android:id="@+id/login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_login_page_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View
                    android:id="@+id/_bg__login_page_ek2"
                    android:layout_width="428dp"
                    android:layout_height="926dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/_bg__login_page_ek2_shape" />

                <TextView
                    android:id="@+id/in"
                    android:layout_width="113dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="114dp"
                    android:layout_marginTop="71dp"
                    android:layout_marginEnd="167dp"
                    android:text="@string/in_string"
                    android:textColor="@color/in_color"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/sight_club"
                    android:layout_width="242dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="157dp"
                    android:layout_marginLeft="141dp"
                    android:layout_marginTop="71dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/sight_club_string"
                    android:textColor="@color/sight_club_color"
                    android:textSize="25sp" />

                <View
                    android:id="@+id/line_1"
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="171dp"
                    android:layout_marginTop="124dp"
                    android:layout_marginEnd="150dp"
                    android:background="@drawable/line_1_shape" />


                <EditText
                    android:id="@+id/passtext"
                    android:layout_width="325dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="284dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rectangle_2_shape"
                    android:drawableLeft="@android:drawable/ic_partial_secure"
                    android:gravity="center"
                    android:hint="Password"
                    android:inputType="numberPassword"
                    android:paddingStart="10dp" />

                <TextView
                    android:id="@+id/forgot_password__"

                    android:layout_width="198dp"
                    android:layout_height="76dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="213dp"
                    android:layout_marginLeft="272dp"
                    android:layout_marginTop="364dp"
                    android:text="@string/forgot_password___string"
                    android:textColor="@color/forgot_password___color"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="325dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="208dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rectangle_1_shape"
                    android:drawableLeft="@android:drawable/ic_dialog_email"
                    android:gravity="center"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp" />


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="241dp"
                    android:layout_height="52dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="101dp"
                    android:layout_marginTop="427dp"
                    android:layout_marginEnd="68dp"
                    android:background="@drawable/rectangle_3_shape"
                    android:text="Login" />

                <TextView
                    android:id="@+id/login_with"
                    android:layout_width="126dp"
                    android:layout_height="38dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="145dp"
                    android:layout_marginLeft="177dp"
                    android:layout_marginTop="513dp"
                    android:layout_marginEnd="140dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/login_with_string"
                    android:textColor="@color/forgot_password___color"
                    android:textSize="16sp" />

                <RelativeLayout android:id="@+id/github"
                    android:layout_marginTop="739dp"
                    android:layout_marginStart="202dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </RelativeLayout>

                <TextView
                    android:id="@+id/don_t_have_an_account_"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="77dp"
                    android:layout_marginLeft="122dp"
                    android:layout_marginTop="634dp"
                    android:layout_marginEnd="118dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/don_t_have_an_account__string"
                    android:textColor="@color/don_t_have_an_account__color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/sight_club"
                    android:layout_alignStart="@+id/don_t_have_an_account_"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="173dp"
                    android:layout_marginLeft="299dp"
                    android:layout_marginTop="511dp"
                    android:layout_marginEnd="33dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/signup_string"
                    android:textColor="@color/signup_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="172dp"

                    android:layout_marginTop="556dp"
                    android:layout_marginEnd="159dp"
                    android:contentDescription="vector"
                    android:src="@drawable/ic_google_fill" />

                <ProgressBar
                    android:id="@+id/pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="344dp"
                    android:layout_marginEnd="180dp"
                    android:visibility="gone"/>


            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>



</RelativeLayout>